# propositionalcalculus

./: .gitignore  README.md  cabal.sandbox.config  propositionalcalculus.cabal
examples/: absorption.txt  absorption2.txt  and_associative.txt  and_communative.txt  and_implies_or.txt  disjunctive_syllogism.txt  excluded_middle.txt  gantos_axe.txt  or_associative.txt  or_communative.txt  reverse_distribution.txt
src/: propositionalcalculus.hs
