name: propositionalcalculus
version: 0.1.0.0
license: MIT
author: Jeremy Mikkola
maintainer: jeremy@jeremymikkola.com
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10
executable propositionalcalculus
  main-is: propositionalcalculus.hs
  hs-source-dirs: src
  build-depends: base >=4.6
  default-language: Haskell2010
